# SandSketch

./: .gitignore  ReadMe.md  build_and_run.ps1  build_and_runS.ps1
SandDrawer/: CMakeLists.txt
SandDrawer/src/: SandCanvas.cpp  SandCanvas.h  SandSimulation.h  TerrainSettings.h  main.cpp  ui_bridge.cpp  ui_bridge.h
SandDrawer/src/UI/: PanelControls.h  SandPanel.cpp  SandPanel.h
SandSketch/: .gitignore  CMakeLists.txt
SandSketch/src/: ReadMe.md  SandCanvas.h  SandSimulation.cpp  TerrainSettings.h  main.cpp
SandSketch/src/UI/: SandPanel.cpp
SandSketch/src/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
studio_sand/: README.md  metadata.json
studio_sand/src/: App.tsx  types.ts
studio_sand/src/components/: Environment.tsx  Sandbox.tsx  Sidebar.tsx
